[STYLE]: fixed the search bar bg color

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <!-- searchbar -->
             <form class="search__bar__container ">
-                <input type="text" class="search__bar" placeholder="Search">
+                <input type="text" class="search__bar bg-grey-700" placeholder="Search">
                 <a href="#"><i class="fas fa-search search__icon text-fuchsia-500"></i></a>
             </form>
             <!-- searchbar -->
