[FEAT]: added the javascript quiz-page

--- a/pages/quiz-page.html
+++ b/pages/quiz-page.html
@@ -105,12 +105,57 @@
                         </div>
                         <div class="p-5">
                             <h4 class="h4 font-normal text-lg subtitle1">
-                                <a class="text-black">Some Title</a>
+                                <a class="text-black">Javascript Quiz</a>
                             </h4>
-                            <p class="body1 text-sm font-light mb-4 text-black">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-                                possimus nostrum!
-                            </p>
+
+                            <hr class="mb-3" />
+
+                            <div class="flex justify-between">
+                                <a href="/pages/quizzes/javascript-quiz/js-quiz-page-1.html"
+                                    class="btn btn-solid-fuchsia text-white">Play Quiz</a>
+
+                                <a onclick="openModal()" id=" modalBtn" class="btn  btn-link-fuchsia">Rules</a>
+
+                                <div id="modal" style="z-index: 30;" class="modal">
+                                    <div class="modal-content bg-white">
+                                        <div
+                                            class="modal-header flex justify-between align-items-center bg-grey-800 text-white p-5">
+                                            <h4 class="h4 text-lg">Quiz Rules</h4>
+                                            <span onclick="closeModal()"
+                                                class="modal-close text-rose-500 text-hover-rose-300">×</span>
+                                        </div>
+                                        <div class="modal-body p-5">
+                                            <p>Some rules in the Modal Body</p>
+                                            <p>Some other rules...</p>
+                                            <p>Some rules in the Modal Body</p>
+                                            <p>Some other rules...</p>
+                                            <p>Some rules in the Modal Body</p>
+                                            <p>Some other rules...</p>
+                                            <p>Some rules in the Modal Body</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="rounded shadow-lg h-min">
+                    <div class="h-full  flex flex-col">
+                        <div class="badge-container">
+                            <span
+                                class="absolute font-bold card-badge badge bg-fuchsia-500 text-white bg-hover-fuchsia-300">New
+                                quiz</span>
+                            <div class="p-5">
+                                <img class="img-responsive" src="https://picsum.photos/500" alt="" />
+                            </div>
+                            <button style="background-color: rgba(255, 255, 255, 0.596);" class="btn-close"></button>
+
+                        </div>
+                        <div class="p-5">
+                            <h4 class="h4 font-normal text-lg subtitle1">
+                                <a class="text-black">CSS Quiz</a>
+                            </h4>
+
                             <hr class="mb-3" />
 
                             <div class="flex justify-between">
@@ -141,7 +186,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-regal-blue-dark rounded shadow-lg h-min">
+                <div class="rounded shadow-lg h-min">
                     <div class="h-full  flex flex-col">
                         <div class="badge-container">
                             <span
@@ -155,12 +200,9 @@
                         </div>
                         <div class="p-5">
                             <h4 class="h4 font-normal text-lg subtitle1">
-                                <a class="text-black">Some Title</a>
+                                <a class="text-black">HTML Quiz</a>
                             </h4>
-                            <p class="body1 text-sm font-light mb-4 text-black">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-                                possimus nostrum!
-                            </p>
+
                             <hr class="mb-3" />
 
                             <div class="flex justify-between">
@@ -191,7 +233,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="bg-regal-blue-dark rounded shadow-lg h-min">
+                <div class="rounded shadow-lg h-min">
                     <div class="h-full  flex flex-col">
                         <div class="badge-container">
                             <span
@@ -205,62 +247,9 @@
                         </div>
                         <div class="p-5">
                             <h4 class="h4 font-normal text-lg subtitle1">
-                                <a class="text-black">Some Title</a>
+                                <a class="text-black">React Quiz</a>
                             </h4>
-                            <p class="body1 text-sm font-light mb-4 text-black">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-                                possimus nostrum!
-                            </p>
-                            <hr class="mb-3" />
 
-                            <div class="flex justify-between">
-                                <a href="#" class="btn btn-solid-fuchsia text-white">Play Quiz</a>
-
-                                <a onclick="openModal()" id=" modalBtn" class="btn btn-link-fuchsia">Rules</a>
-
-                                <div id="modal" style="z-index: 30;" class="modal">
-                                    <div class="modal-content bg-white">
-                                        <div
-                                            class="modal-header flex justify-between align-items-center bg-grey-800 text-white p-5">
-                                            <h4 class="h4 text-lg">Quiz Rules</h4>
-                                            <span onclick="closeModal()"
-                                                class="modal-close text-rose-500 text-hover-rose-300">×</span>
-                                        </div>
-                                        <div class="modal-body p-5">
-                                            <p>Some rules in the Modal Body</p>
-                                            <p>Some other rules...</p>
-                                            <p>Some rules in the Modal Body</p>
-                                            <p>Some other rules...</p>
-                                            <p>Some rules in the Modal Body</p>
-                                            <p>Some other rules...</p>
-                                            <p>Some rules in the Modal Body</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-regal-blue-dark rounded shadow-lg h-min">
-                    <div class="h-full  flex flex-col">
-                        <div class="badge-container">
-                            <span
-                                class="absolute font-bold card-badge badge bg-fuchsia-500 text-white bg-hover-fuchsia-300">New
-                                quiz</span>
-                            <div class="p-5">
-                                <img class="img-responsive" src="https://picsum.photos/500" alt="" />
-                            </div>
-                            <button style="background-color: rgba(255, 255, 255, 0.596);" class="btn-close"></button>
-
-                        </div>
-                        <div class="p-5">
-                            <h4 class="h4 font-normal text-lg subtitle1">
-                                <a class="text-black">Some Title</a>
-                            </h4>
-                            <p class="body1 text-sm font-light mb-4 text-black">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero,
-                                possimus nostrum!
-                            </p>
                             <hr class="mb-3" />
 
                             <div class="flex justify-between">
