--- a/pages/quiz-page.html
+++ b/pages/quiz-page.html
@@ -111,7 +111,7 @@
                             <hr class="mb-3" />
 
                             <div class="flex justify-between">
-                                <a href="/pages/quizzes/javascript-quiz/js-quiz-page-1.html"
+                                <a href="/pages/quizzes/javascript-quiz/js-quiz-page.html"
                                     class="btn btn-solid-fuchsia text-white">Play Quiz</a>
 
                                 <a onclick="openModal()" id=" modalBtn" class="btn  btn-link-fuchsia">Rules</a>
@@ -159,7 +159,8 @@
                             <hr class="mb-3" />
 
                             <div class="flex justify-between">
-                                <a href="#" class="btn btn-solid-fuchsia text-white">Play Quiz</a>
+                                <a href="/pages/quizzes/css-quiz/css-quiz-page.html"
+                                    class="btn btn-solid-fuchsia text-white">Play Quiz</a>
 
                                 <a onclick="openModal()" id=" modalBtn" class="btn btn-link-fuchsia">Rules</a>
 
