[FEAT]: added the css result-page

--- a/pages/quizzes/css-quiz/css-quiz-result-page.html
+++ b/pages/quizzes/css-quiz/css-quiz-result-page.html
@@ -76,16 +76,18 @@
     <main style="top: 5rem; min-height: 100vh" class="relative w-full">
 
         <div style="max-width: 980px; margin: auto" class="w-full">
-            <h3 class="text-4xl font-normal text-center text-black underline">CSS MCQ</h3>
+            <h3 class="text-4xl font-normal text-center text-black underline">CSS MCQ Result</h3>
 
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
+
             <div class="flex justify-between align-items-center">
-                <a href="/pages/quizzes/css-quiz/css-quiz-result-page.html"
-                    class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
-                <a href="#" class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">
-                    Quiz Rules / About Quiz
-                </a>
+                <a href="/pages/quiz-page.html" class="btn shadow-md btn-outline-fuchsia">Back to Quizzes</a>
+
+                <div class="flex justify-center align-items-center">
+                    <h3 class="h3 inline-flex mr-5">Score</h3>
+                    <h3 class="h3 font-bold inline-flex text-green-500">3</h3>
+                </div>
 
             </div>
 
@@ -103,7 +105,7 @@
 
                     <div class="flex justify-center align-items-center">
                         <h6 class="mr-3 text-lg font-bold text-fuchsia-500">Score:</h6>
-                        <h6 class="text-lg font-normal">0</h6>
+                        <h6 class="text-lg font-normal">1</h6>
                     </div>
                 </div>
 
@@ -117,11 +119,16 @@
                         presentation and content, including layout, colors, and fonts</div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">CSS is the language used to
                         style the HTML documents</div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">All of the mentioned</div>
+                    <div style="display:block" class="btn shadow-md text-white btn-solid-green">All of the mentioned
+                    </div>
                 </div>
             </div>
+            <div class="spacer-3rem"></div>
 
-
+            <div class="alert-box bg-green-200 text-green-800 text-lg ">
+                <span><i class="alert-icon fas fa-check-circle"></i></span>
+                Whooho, you are correct.
+            </div>
 
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
@@ -137,7 +144,7 @@
 
                     <div class="flex justify-center align-items-center">
                         <h6 class="mr-3 text-lg font-bold text-fuchsia-500">Score:</h6>
-                        <h6 class="text-lg font-normal">0</h6>
+                        <h6 class="text-lg font-normal">2</h6>
                     </div>
                 </div>
 
@@ -149,10 +156,19 @@
                         Style
                     </div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Color Style Sheets</div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Cascading Style Sheets</div>
+                    <div style="display:block" class="btn shadow-md text-white btn-solid-green">Cascading Style Sheets
+                    </div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Cascade Style Sheet</div>
                 </div>
             </div>
+
+            <div class="spacer-3rem"></div>
+
+            <div class="alert-box bg-green-200 text-green-800 text-lg ">
+                <span><i class="alert-icon fas fa-check-circle"></i></span>
+                Whooho, you are correct.
+            </div>
+
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
@@ -166,7 +182,7 @@
 
                     <div class="flex justify-center align-items-center">
                         <h6 class="mr-3 text-lg font-bold text-fuchsia-500">Score:</h6>
-                        <h6 class="text-lg font-normal">0</h6>
+                        <h6 class="text-lg font-normal">3</h6>
                     </div>
                 </div>
 
@@ -175,13 +191,21 @@
                 </h5>
 
                 <div style="gap: 1rem" class="flex flex-col">
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia text-center">Hakon Wium Lie
+                    <div style="display:block" class="btn shadow-md btn-solid-green text-center">Hakon Wium Lie
                     </div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Sergey Brin</div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Rasmus Lerdorf</div>
+                    <div style="display:block" class="btn shadow-md btn-solid-rose text-white">Rasmus Lerdorf</div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">Brendan Eich</div>
                 </div>
             </div>
+
+            <div class="spacer-3rem"></div>
+
+            <div class="alert-box bg-green-200 text-green-800 text-lg">
+                <span> <span><i class="alert-icon fas fa-check-circle"></i></span> </span>
+                Whoohoo, you are correct.
+            </div>
+
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
@@ -195,7 +219,7 @@
 
                     <div class="flex justify-center align-items-center">
                         <h6 class="mr-3 text-lg font-bold text-fuchsia-500">Score:</h6>
-                        <h6 class="text-lg font-normal">0</h6>
+                        <h6 class="text-lg font-normal">3</h6>
                     </div>
                 </div>
 
@@ -206,10 +230,17 @@
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia text-center"> &alt;css>
                     </div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">&alt;!DOCTYPE html></div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">&alt;script></div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">&alt;style></div>
+                    <div style="display:block" class="btn shadow-md btn-solid-red">&alt;script></div>
+                    <div style="display:block" class="btn shadow-md btn-solid-green">&alt;style></div>
                 </div>
             </div>
+            <div class="spacer-3rem"></div>
+
+            <div class="alert-box bg-rose-200 text-rose-800 text-lg">
+                <span><i class="alert-icon fas fa-exclamation-triangle"></i> </span>
+                Oops, you are wrong. No point for this one.
+            </div>
+
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
@@ -224,7 +255,7 @@
 
                     <div class="flex justify-center align-items-center">
                         <h6 class="mr-3 text-lg font-bold text-fuchsia-500">Score:</h6>
-                        <h6 class="text-lg font-normal">0</h6>
+                        <h6 class="text-lg font-normal">3</h6>
                     </div>
                 </div>
 
@@ -235,16 +266,24 @@
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia text-center">tag
                     </div>
                     <div style="display:block" class="btn shadow-md btn-outline-fuchsia">id</div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">class</div>
-                    <div style="display:block" class="btn shadow-md btn-outline-fuchsia">both class and tag</div>
+                    <div style="display:block" class="btn shadow-md btn-solid-green">class</div>
+                    <div style="display:block" class="btn shadow-md btn-solid-red">both class and tag</div>
                 </div>
+            </div>
+            <div class="spacer-3rem"></div>
+
+            <div class="alert-box bg-rose-200 text-rose-800 text-lg">
+                <span><i class="alert-icon fas fa-exclamation-triangle"></i> </span>
+                Oops, you are wrong. No point for this one.
             </div>
 
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
 
-            <a href="/pages/quizzes/css-quiz/css-quiz-result-page.html"
-                class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
+            <div class="flex justify-center align-items-center">
+                <h3 class="h3 inline-flex mr-5">Score</h3>
+                <h3 class="h3 font-bold inline-flex text-green-500">3</h3>
+            </div>
         </div>
 
     </main>
