[FEAT]: added the javascript result-page

--- a/pages/quizzes/javascript-quiz/js-quiz-page.html
+++ b/pages/quizzes/javascript-quiz/js-quiz-page.html
@@ -81,7 +81,8 @@
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
             <div class="flex justify-between align-items-center">
-                <a href="#" class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
+                <a href="/pages/quizzes/javascript-quiz/js-quiz-result-page.html"
+                    class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
                 <a href="#" class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">
                     Quiz Rules / About Quiz
                 </a>
@@ -240,7 +241,8 @@
             <div class="spacer-3rem"></div>
             <div class="spacer-3rem"></div>
 
-            <a href="#" class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
+            <a href="/pages/quizzes/javascript-quiz/js-quiz-result-page.html"
+                class="btn btn-sm btn-solid-fuchsia shadow-sm text-white text-center">Check Score</a>
         </div>
 
     </main>
