--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- header -->
     <header class="w-full h-20 shadow bg-grey-800 fixed z-50">
-        <div class="flex justify-around align-items-center h-full w-full">
+        <nav class="flex justify-around align-items-center h-full w-full">
             <!-- logo -->
             <div class="flex justify-center align-items-center">
                 <a href="/index.html">
@@ -63,7 +63,7 @@
                 <a href="#" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
             </div>
             <!-- icons (profile) -->
-        </div>
+        </nav>
     </header>
     <!-- header -->
 
