[FEAT]: added login page

--- a/pages/auth-pages/login.html
+++ b/pages/auth-pages/login.html
@@ -60,7 +60,7 @@
                     </button>
                 </a>
 
-                <a href="/pages/auth-pages/login.html" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
+                <a href="#" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
             </div>
             <!-- icons (profile) -->
         </div>
@@ -69,21 +69,40 @@
 
     <!-- main -->
     <main style="top: 5rem; min-height: 100vh" class="relative w-full  flex justify-center align-items-center">
-        <div>
-            <div class="flex flex-col justify-center mb-10">
-                <h2 class="text-8xl mb-10 hero-heading">Quiz - o - Mania</h2>
-                <h5 class="text-xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis dicta rem, in
-                    fugit porro
-                    blanditiis
-                    <br>
-                    quo et quae minima delectus atque cupiditate? Eveniet suscipit distinctio facilis nam nisi vel
-                    dignissimos.
-                </h5>
+        <div style="margin: auto; " class="h=96 w-96 p-10 shadow-2xl rounded-2xl">
 
+            <h3 class="text-2xl font-normal text-center text-black mb-20">Login</h3>
+
+
+            <div class="mb-5">
+                <div class="input-container text-black">
+                    <input type="text" id="email" class="input-outlined input-outlined-fuchsia" autocomplete="off"
+                        placeholder=" " />
+                    <label style="background-color: white" for="email" class="input-label ">Email *</label>
+                </div>
             </div>
 
-            <a href="/pages/quiz-page.html" class="btn btn-solid-fuchsia text-white btn-lg">Browse Quizzes</a>
 
+            <div class="mb-5">
+                <div class="input-container text-black">
+                    <input type="text" id="email" class="input-outlined input-outlined-fuchsia" autocomplete="off"
+                        placeholder=" " />
+                    <label style="background-color: white;" for="email" class="input-label ">Password *</label>
+                </div>
+            </div>
+
+            <div class="flex justify-between mb-10">
+                <div class="flex justify-center align-items-center">
+                    <input type="checkbox" class="mr-3" name="" id="">
+                    <h6 class="text-lg text-black font-normal">Remember me</h6>
+                </div>
+                <a href="/pages/auth-pages/signup.html" class="btn btn-link-fuchsia text-black">Sign Up ?</a>
+            </div>
+
+            <div>
+                <a href="" class="btn btn-link-fuchsia text-black">Forgot Password ?</a>
+
+            </div>
         </div>
     </main>
     <!-- main -->
