--- a/pages/quiz-page.html
+++ b/pages/quiz-page.html
@@ -60,7 +60,7 @@
                     </button>
                 </a>
 
-                <a href="#" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
+                <a href="/pages/auth-pages/login.html" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
             </div>
             <!-- icons (profile) -->
         </div>
