--- a/pages/auth-pages/signup.html
+++ b/pages/auth-pages/signup.html
@@ -51,13 +51,13 @@
             <div class="flex justify-center align-items-center">
 
                 <a href="">
-                    <button style="background: transparent;"
+                    <a style="background: transparent;" href="/pages/profile-page/profile-page.html"
                         class="btn flex flex-col text-fuchsia-500 text-hover-fuchsia-400 tooltip">
                         <span><i class="text-lg fas fa-user "></i> </span>
 
                         <span style="text-transform: none;" class="tooltip-text">Profile</span>
 
-                    </button>
+                    </a>
                 </a>
 
                 <a href="/pages/auth-pages/login.html" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
@@ -71,7 +71,7 @@
     <main style="top: 5rem; min-height: 100vh" class="relative w-full  flex justify-center align-items-center">
         <div style="margin: auto; " class="h=96 w-96 p-10 shadow-2xl rounded-2xl">
 
-            <h3 class="text-2xl font-normal text-center text-black mb-20">Login</h3>
+            <h3 class="text-2xl font-normal text-center text-black mb-20">Signup</h3>
 
 
             <div class="mb-5">
