--- a/pages/quizzes/javascript-quiz/js-quiz-page.html
+++ b/pages/quizzes/javascript-quiz/js-quiz-page.html
@@ -51,13 +51,13 @@
             <div class="flex justify-center align-items-center">
 
                 <a href="">
-                    <button style="background: transparent;"
+                    <a style="background: transparent;" href="/pages/profile-page/profile-page.html"
                         class="btn flex flex-col text-fuchsia-500 text-hover-fuchsia-400 tooltip">
                         <span><i class="text-lg fas fa-user "></i> </span>
 
                         <span style="text-transform: none;" class="tooltip-text">Profile</span>
 
-                    </button>
+                    </a>
                 </a>
 
                 <a href="/pages/auth-pages/login.html" class="btn btn-solid-fuchsia text-white ml-5">Login</a>
